@@ -123,6 +123,7 @@ btonline-btechmux 0.6:
           or robot (Greg)
 	* @list functions now has built-in and hardcoded functions
 	  separated (Greg)
+	* Added connrecord() from MUX2 (Greg)
 
 	- Merge
 	* Added Exile's roll on back walk code. (Tuncay)
